--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 
     <!-- Principal conteneur -->
+<main>
 <div class="page-container">
     
     <!-- header -->
@@ -55,7 +56,7 @@
                 <div class="col-sm-12">
                     <img src="img/logo.png" class="center-block image-resize-mode" alt="Logo de la chouette agence" />
                     <h1 class="text-center hero-bloc-text tc-white ">
-                        La chouette agence.
+                        La chouette agence
                     </h1>
                     <div class="text-center">
                         <a href="contact.html" aria-label="Rejoindre la page contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -217,13 +218,13 @@
         </div>
     </section>
     <!-- section-contact END -->
-    
+</main>    
     <!-- Footer -->
     <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
         <div class="container bloc-sm">
             <div class="row">
                 <div class="col-sm-12">
-                    <h3 class="text-center white">
+                    <h3 class="text-center black">
                         La chouette agence - Agence web basée à Lyon.
                     </h3>
                     <div class="row row-no-gutters social">
@@ -266,11 +267,11 @@
     <!-- Principal conteneur END -->
 
 <!-- Scripts JS -->
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
+<script src="./js/jquery-2.1.0.js" defer></script>
+<script src="./js/bootstrap.js" defer></script>
+<script src="./js/blocs.js" defer></script>
 <script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.js"></script>
+<script src="./js/gmaps.js" defer></script>
 
 </body>
 </html>
