--- a/contact.html
+++ b/contact.html
@@ -76,25 +76,25 @@
                                     <label for="name">
                                         Nom
                                     </label>
-                                    <input id="name" class="form-control" aria-required="true" aria-label="entrez votre nom" />
+                                    <input id="name" class="form-control" aria-required="true" aria-label="entrez votre nom" placeholder="Entrez votre nom ou celui de votre société" />
                                 </div>
                                 <div class="form-group">
                                     <label for="email">
                                         Adresse email
                                     </label>
-                                    <input id="email" class="form-control" type="email" aria-required="true" aria-label="entrez votre email" />
+                                    <input id="email" class="form-control" type="email" aria-required="true" aria-label="entrez votre email" placeholder="Entrez votre email" />
                                 </div>
                                 <div class="form-group">
                                     <label for="input_504">
                                         Comment nous avez-vous connu ?
                                     </label>
-                                    <input class="form-control" type="text" aria-required="true" aria-label="indiquez comment vous nous avez connu" id="input_504" />
+                                    <input class="form-control" type="text" aria-required="true" aria-label="indiquez comment vous nous avez connu" id="input_504" placeholder="Indiquez comment vous nous avez connu" />
                                 </div>
                                 <div class="form-group">
                                     <label for="message">
                                         Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
                                     </label>
-                                    <textarea id="message" class="form-control" rows="4" cols="50" aria-required="true" aria-label="decrivez nous votre projet en détail"></textarea>
+                                    <textarea id="message" class="form-control" rows="4" cols="50" aria-required="true" aria-label="decrivez nous votre projet en détail" placeholder="Décrivez nous votre projet en détails"></textarea>
                                 </div> 
                                 <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" aria-label="envoyez votre message" type="submit">
                                     Envoyer
@@ -104,9 +104,10 @@
                         <aside class="col-sm-6">
                             <p class="text-center">
                                 <a href="mailto:contact@lachouetteagence.com" aria-label="contacter l'agence par email">contact@lachouetteagence.com</a><br>
-                                2 place Sathonay 69001 Lyon<br>
-                                Ouvert de 9h à 18h, du lundi au vendredi<br>
-                            </p>
+                            </p>   
+                            <p class="text-center"> 2 place Sathonay 69001 Lyon<br></p>
+                            <p class="text-center">Ouvert de 9h à 18h, du lundi au vendredi<br>
+                            
                         </aside>
                     </div>
                 </div>
